pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart.strong.modular.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:15:50: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   f0([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"]);
//                                                  ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:16:50: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   f0([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello", 3]);
//                                                  ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:20:53: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   f1(a: [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"]);
//                                                     ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:21:53: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   f1(a: [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello", 3]);
//                                                     ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:25:50: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   f2([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"]);
//                                                  ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:26:50: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   f2([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello", 3]);
//                                                  ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:33:49: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//     [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"],
//                                                 ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:36:49: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//     [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"],
//                                                 ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:48:51: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//       [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"],
//                                                   ^
//
// pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:53:51: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//       [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"],
//                                                   ^
//
import self as self;
import "dart:core" as core;

static method f0(core::List<core::int> a) → void {}
static method f1({required core::List<core::int> a}) → void {}
static method f2(core::Iterable<core::int> a) → void {}
static method f3(core::Iterable<core::Iterable<core::int>> a) → void {}
static method f4({required core::Iterable<core::Iterable<core::int>> a}) → void {}
static method test() → void {
  self::f0(<core::int>[]);
  self::f0(<core::int>[3]);
  self::f0(<core::int>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:15:50: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  f0([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"]);
                                                 ^" in "hello" as{TypeError} core::int]);
  self::f0(<core::int>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:16:50: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  f0([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\", 3]);
                                                 ^" in "hello" as{TypeError} core::int, 3]);
  self::f1(a: <core::int>[]);
  self::f1(a: <core::int>[3]);
  self::f1(a: <core::int>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:20:53: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  f1(a: [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"]);
                                                    ^" in "hello" as{TypeError} core::int]);
  self::f1(a: <core::int>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:21:53: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  f1(a: [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\", 3]);
                                                    ^" in "hello" as{TypeError} core::int, 3]);
  self::f2(<core::int>[]);
  self::f2(<core::int>[3]);
  self::f2(<core::int>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:25:50: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  f2([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"]);
                                                 ^" in "hello" as{TypeError} core::int]);
  self::f2(<core::int>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:26:50: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  f2([/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\", 3]);
                                                 ^" in "hello" as{TypeError} core::int, 3]);
  self::f3(<core::Iterable<core::int>>[]);
  self::f3(<core::Iterable<core::int>>[<core::int>[3]]);
  self::f3(<core::Iterable<core::int>>[<core::int>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:33:49: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
    [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"],
                                                ^" in "hello" as{TypeError} core::int]]);
  self::f3(<core::Iterable<core::int>>[<core::int>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:36:49: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
    [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"],
                                                ^" in "hello" as{TypeError} core::int], <core::int>[3]]);
  self::f4(a: <core::Iterable<core::int>>[]);
  self::f4(a: <core::Iterable<core::int>>[<core::int>[3]]);
  self::f4(a: <core::Iterable<core::int>>[<core::int>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:48:51: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
      [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"],
                                                  ^" in "hello" as{TypeError} core::int]]);
  self::f4(a: <core::Iterable<core::int>>[<core::int>[invalid-expression "pkg/front_end/testcases/inference/downwards_inference_on_function_arguments_infer_downwards.dart:53:51: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
      [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"],
                                                  ^" in "hello" as{TypeError} core::int], <core::int>[3]]);
}
static method main() → dynamic {}
